# Ecwid-Console-downloader

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindDocopt.cmake  FindGoogleTest.cmake  FindUV.cmake  FindUVPP.cmake  Findhttp-parser.cmake
doc/: dia.graphml  dia.xmi
include/: aio_uvpp.h  aio_uvw.h  aio_uvw_tcp.h  aio_uvw_tcp_bandwidth.h  aio_uvw_tcp_bandwidth_throttled.h  aio_uvw_tcp_simple.h  bandwidth.h  bandwidth_controller.h  bandwidth_throttling.h  dashboard.h  dashboard_simple.h  data_chunk.h  downloader.h  downloader_bandwidth_throttled.h  downloader_simple.h  factory.h  factory_bandwidth_throttled.h  factory_simple.h  http.h  job.h  on_tick.h  on_tick_simple.h  program_options.h  task.h  task_simple.h
include/aio/: bandwidth.h  bandwidth_controller.h  factory_tcp.h  factory_tcp_bandwidth.h  tcp.h  tcp_bandwidth.h  tcp_simple.h
src/: aio_uvw_tcp_bandwidth.cpp  bandwidth_controller.cpp  http.cpp  on_tick_simple.cpp  program_options.cpp  task_simple.cpp
src/aio/: factory_tcp.cpp  factory_tcp_bandwidth.cpp  tcp_bandwidth.cpp
test/: CMakeLists.txt  aio_callback_template.h  aio_dns_mock.h  aio_file_mock.h  aio_loop_mock.h  aio_tcp_handle_mock.h  aio_tcp_mock.h  aio_tcp_socket_mock.h  aio_tcp_wrapper_mock.h  aio_timer_mock.h  bandwidth_controller_mock.h  bandwidth_stream_mock.h  bandwidth_time_mock.h  dashboard_mock.h  downloader_mock.h  factory_mock.h  on_tick_mock.h  task_mock.h  test_aio.cpp  test_aio_dns.cpp  test_aio_tcp_bandwidth.cpp  test_aio_tcp_simple.cpp  test_aio_timer.cpp  test_bandwidth_controller.cpp  test_downloader_simple.cpp  test_http_parser_response.cpp  test_http_parser_uri.cpp  test_on_tick_simple.cpp  test_task_simple.cpp  test_uvw_dns.cpp  test_uvw_timer.cpp
test/mock/: dashboard_mock.h  downloader_mock.h  factory_mock.h  on_tick_mock.h  task_mock.h
test/mock/aio/: bandwidth_controller_mock.h  bandwidth_stream_mock.h  bandwidth_time_mock.h  factory_tcp_mock.h  tcp_mock.h  tcp_socket_mock.h
test/mock/uvw/: loop_mock.h  tcp_handle_mock.h
